--- a/source/photo.html
+++ b/source/photo.html
@@ -100,10 +100,11 @@
     <section class="video">
       <h2 class="visually-hidden">Видеопрезентация Седоны</h2>
       <div class="video__wrapper">
-        <h3 class="video__title">Все еще сомневаетесь?</h3>
-        <p class="video__description">Смотрите Видеопрезентацию и<br>
-          скорее за билетами, пока они не<br>
-          подорожали в очередной раз!</p>
+        <div class="video-text__wrapper">
+          <h3 class="video__title">Все еще сомневаетесь?</h3>
+          <p class="video__description">Смотрите Видеопрезентацию и скорее за билетами, пока они не подорожали в
+            очередной раз!</p>
+        </div>
         <video controls poster="img/video-mobile@1x.jpg" width="320" height="201"
           src="https://www.youtube.com/watch?v=_qHjLngt7OI"></video>
         <div class="video-controls">
