Правки по первому заданию

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,8 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page__body">
+<body class="page__body page-container">
+
   <header class="page-header">
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button">
@@ -43,6 +44,7 @@
       <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
     </a>
   </header>
+
   <script>
     var navMain = document.querySelector('.main-nav');
     var navToggle = document.querySelector('.main-nav__toggle');
@@ -64,7 +66,7 @@
     <section class="welcome">
       <h2 class="visually-hidden">Приветствуем!</h2>
       <div class="welcome__wrapper">
-        <img src="img/text-sedona-index.svg" width="282" height="214"
+        <img class="welcome__text" src="img/text-sedona-index.svg" width="282" height="214"
           alt="Добро пожаловать в безумно красивую Седону. «Потому что Гранд Каньон отстой!»">
       </div>
     </section>
@@ -87,7 +89,7 @@
                 Седона не аттракцион для туристов,там<br>
                 течет своя жизнь</p>
             </div>
-            <img src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Вид на уютный местный дом">
+            <img class="advantages__img" src="img/main-city-mobile@1x.jpg" width="320" height="260" alt="Вид на уютный местный дом">
           </li>
           <li class="advantages__item">
             <div class="deep-advantages">
@@ -168,7 +170,7 @@
                 осмелитесь, конечно
               </p>
             </div>
-            <img class="second-advantage__img" src="img/main-bridge-mobile@1x.jpg" width="320" height="260"
+            <img class="second-advantage__img advantages__img" src="img/main-bridge-mobile@1x.jpg" width="320" height="260"
               alt="Вид на уникальный местный ландшафт">
           </li>
         </ul>
@@ -221,7 +223,7 @@
     </section>
   </main>
   <footer class="page-footer">
-    <div class="page-footer__wrapper">
+    <div class="page-footer__wrapper ">
       <div class="sedona-tag page-footer__item">#visitsedona</div>
       <div class="page-footer__social social page-footer__item">
         <ul class="social__list">
