--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page__body">
+<body class="page__body page-container">
   <header class="page-header">
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button">
@@ -63,7 +63,7 @@
     <h1 class="visually-hidden">Отзывы о городе «Седона»</h1>
     <div class="page-intro bg-page-intro">
       <div class="page-intro__wrapper">
-        <img src="img/text-sedona.svg" width="229" height="39" alt="Седона">
+        <img class="page-intro__text" src="img/text-sedona.svg" width="229" height="39" alt="Седона">
       </div>
     </div>
     <section class="feedback">
