--- a/source/photo.html
+++ b/source/photo.html
@@ -8,7 +8,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body class="page__body">
+<body class="page__body page-container">
   <header class="page-header">
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button">
@@ -62,7 +62,7 @@
   <main class="inner-page">
     <div class="page-intro bg-page-intro">
       <div class="page-intro__wrapper">
-        <img src="img/text-sedona.svg" width="229" height="39" alt="Седона">
+        <img class="page-intro__text" src="img/text-sedona.svg" width="229" height="39" alt="Седона">
       </div>
     </div>
     <section class="photo-video">
@@ -74,41 +74,80 @@
       <div class="photo">
         <div class="photo__wrapper">
           <div class="photo__item photo__first">
-            <img src="img/photo-sunset-mobile@1x.jpg" width="280" height="280"
+            <img class="photo__first-img" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280"
               alt="Вид на дорогу уходящую к горам во время захода солнца">
-            <div class="photo-text__wrapper">
-              <h3 class="photo__title">Неродные просторы</h3>
-              <p class="photo__description">Автор фото: Борис</p>
-              <button class="heart" type="button"><span class="likes-number">1350</span></button>
+            <div class="photo-text__wrapper ">
+              <div class="photo-text__wrapper--desktop">
+                <h3 class="photo__title">Неродные просторы</h3>
+                <p class="photo__description">Автор фото: Борис</p>
+                <button class="like" type="button"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                  <g id="Page-1">
+                    <g id="Core" transform="translate(-295.000000, -464.000000)">
+                      <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                        <path id="Shape" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                      </g>
+                    </g>
+                  </g>
+                </svg><span class="likes-number">1350</span></button>
             </div>
+          </div>
           </div>
           <ul class="photo__list">
             <li class="photo__item">
-              <img src="img/photo-cactus-mobile@1x.jpg" width="280" height="280"
+              <img class="photo__img" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280"
                 alt="Необычный местный какутус на фоне красных скал и зелени">
               <div class="photo-text__wrapper">
-                <h3 class="photo__title">Местная растительность</h3>
-                <p class="photo__description">Автор фото: Сергей</p>
-                <button class="heart" type="button"><span class="likes-number">143</span></button>
+                <div class="photo-text__wrapper--desktop">
+                  <h3 class="photo__title">Местная растительность</h3>
+                  <p class="photo__description">Автор фото: Сергей</p>
+                  <button class="like" type="button"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Core" transform="translate(-295.000000, -464.000000)">
+                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                          <path id="Shape" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                        </g>
+                      </g>
+                    </g>
+                  </svg><span class="likes-number">143</span></button>
               </div>
             </li>
             <li class="photo__item">
-              <img src="img/photo-roads-mobile@1x.jpg" width="280" height="280"
+              <img class="photo__img" src="img/photo-roads-mobile@1x.jpg" width="280" height="280"
                 alt="Вид на горную извилистую дорогу, утапающую в зелени">
               <div class="photo-text__wrapper">
-                <h3 class="photo__title">Дорога на север</h3>
-                <p class="photo__description">Автор фото: Петр</p>
-                <button class="heart" type="button"><span class="likes-number">96</span></button>
+                <div class="photo-text__wrapper--desktop">
+                  <h3 class="photo__title">Дорога на север</h3>
+                  <p class="photo__description">Автор фото: Петр</p>
+                  <button class="like" type="button"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Core" transform="translate(-295.000000, -464.000000)">
+                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                          <path id="Shape" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                        </g>
+                      </g>
+                    </g>
+                  </svg><span class="likes-number">96</span></button>
+                </div>
               </div>
             </li>
             <li class="photo__item">
-              <img src="img/photo-bridge-mobile@1x.jpg" width="280" height="280"
+              <img class="photo__img" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280"
                 alt="Вид на красные горы и зеленую долину между ними">
               <div class="photo-text__wrapper">
-                <h3 class="photo__title">Мост Дьявола</h3>
-                <p class="photo__description">Автор фото: Антон</p>
-                <button class="heart" type="button"><span class="likes-number">254</span></button>
-              </div>
+                <div class="photo-text__wrapper--desktop">
+                  <h3 class="photo__title">Мост Дьявола</h3>
+                  <p class="photo__description">Автор фото: Антон</p>
+                  <button class="like" type="button"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Core" transform="translate(-295.000000, -464.000000)">
+                        <g id="thumb-up" transform="translate(295.000000, 464.000000)">
+                          <path id="Shape" fill="#000000" d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z"/>
+                        </g>
+                      </g>
+                    </g>
+                  </svg><span class="likes-number">254</span></button>
+                </div>
+            </div>
             </li>
           </ul>
         </div>
