--- a/source/index.html
+++ b/source/index.html
@@ -205,8 +205,8 @@
       <div class="search__wrapper">
         <h3 class="search__title">Заинтересовались?</h3>
         <p class="search__description">
-          Укажите предполагаемые даты поездки,<br>
-          и мы покажем вам лучшие<br>
+          Укажите предполагаемые даты<br>
+          поездки, и мы покажем вам лучшие<br>
           предложения гостиниц в Седоне
         </p>
         <a class="button" href="">Найти гостиницу</a>
