--- a/source/index.html
+++ b/source/index.html
@@ -73,7 +73,7 @@
     <section class="advantages">
       <header class="advantages__header">
         <h2 class="visually-hidden">Наши преимущества</h2>
-        <p class="advantages__slogan main-slogan">Седона - небольшой<br>
+        <p class="advantages__slogan main-slogan">Седона — небольшой<br>
           городок в Аризоне,<br>
           заслуживающий большего!</p>
         <p class="advantages__intro main-intro">Рассмотрим 5 причин, по которым<br>
@@ -173,7 +173,7 @@
           </li>
         </ul>
         <ul class="advantages__list advantages__others">
-          <li class="advantages__item standart-theme">
+          <li class="advantages__item advantages-others__item standart-theme">
             <h3 class="advantages__title">Небольшая<br> площадь</h3>
             <span class="advatages__number">№3</span>
             <p class="advantages__description advantages-others__description">
@@ -181,7 +181,7 @@
               очень близко
             </p>
           </li>
-          <li class="advantages__item standart-theme">
+          <li class="advantages__item advantages-others__item standart-theme">
             <h3 class="advantages__title">Красивая<br> дорога</h3>
             <span class="advatages__number">№4</span>
             <p class="advantages__description advantages-others__description">
@@ -189,7 +189,7 @@
               совсем не скучно!
             </p>
           </li>
-          <li class="advantages__item standart-theme">
+          <li class="advantages__item advantages-others__item standart-theme">
             <h3 class="advantages__title">Мало<br> туристов</h3>
             <span class="advatages__number">№5</span>
             <p class="advantages__description advantages-others__description">
