--- a/source/photo.html
+++ b/source/photo.html
@@ -80,7 +80,7 @@
               <div class="photo-text__wrapper--desktop">
                 <h3 class="photo__title">Неродные просторы</h3>
                 <p class="photo__description">Автор фото: Борис</p>
-                <button class="like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
+                <button class="like first-photo__like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                     viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                     <g id="Page-1">
@@ -103,7 +103,7 @@
                 <div class="photo-text__wrapper--desktop">
                   <h3 class="photo__title">Местная растительность</h3>
                   <p class="photo__description">Автор фото: Сергей</p>
-                  <button class="like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
+                  <button class="like others-photo__like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                       viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                       <g id="Page-2">
@@ -125,7 +125,7 @@
                 <div class="photo-text__wrapper--desktop">
                   <h3 class="photo__title">Дорога на север</h3>
                   <p class="photo__description">Автор фото: Петр</p>
-                  <button class="like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
+                  <button class="like others-photo__like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                       viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                       <g id="Page-3">
@@ -147,7 +147,7 @@
                 <div class="photo-text__wrapper--desktop">
                   <h3 class="photo__title">Мост Дьявола</h3>
                   <p class="photo__description">Автор фото: Антон</p>
-                  <button class="like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
+                  <button class="like others-photo__like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                       viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                       <g id="Page-4">
