--- a/source/form.html
+++ b/source/form.html
@@ -39,9 +39,15 @@
         </ul>
       </div>
     </nav>
-    <a class="page-header__logo" href="index.html">
-      <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
-    </a>
+    <div class="logo__wrapper">
+      <a class="page-header__logo-link" href="index.html">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+          <img class="page-header__logo" src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
+        </picture>
+      </a>
+    </div>
   </header>
   <script>
     var navMain = document.querySelector('.main-nav');
@@ -61,9 +67,13 @@
   </script>
   <main class="inner-page">
     <h1 class="visually-hidden">Отзывы о городе «Седона»</h1>
-    <div class="page-intro bg-page-intro">
+    <div class="page-intro">
       <div class="page-intro__wrapper">
-        <img class="page-intro__text" src="img/text-sedona.svg" width="229" height="39" alt="Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/text-sedona-inner-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/text-sedona-inner-tablet.svg">
+          <img class="page-intro__text" src="img/text-sedona-inner-mobile.svg" width="229" height="39" alt="Седона">
+        </picture>
       </div>
     </div>
     <section class="feedback">
