--- a/source/index.html
+++ b/source/index.html
@@ -42,8 +42,12 @@
       </div>
     </nav>
     <div class="logo__wrapper">
-      <a class="page-header__logo">
-        <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
+      <a class="page-header__logo-link">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+          <img class="page-header__logo" src="img/logo-sedona-mobile.svg" width="102" height="84" alt="город «Седона»">
+        </picture>
       </a>
     </div>
   </header>
@@ -69,8 +73,12 @@
     <section class="welcome">
       <h2 class="visually-hidden">Приветствуем!</h2>
       <div class="welcome__wrapper">
-        <img class="welcome__text" src="img/text-sedona-index.svg" width="282" height="214"
-          alt="Добро пожаловать в безумно красивую Седону. «Потому что Гранд Каньон отстой!»">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/text-sedona-index-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/text-sedona-index-tablet.svg">
+          <img class="welcome__text" src="img/text-sedona-index-mobile.svg" width="282" height="214"
+            alt="Добро пожаловать в безумно красивую Седону. «Потому что Гранд Каньон отстой!»">
+        </picture>
       </div>
     </section>
     <section class="advantages">
@@ -92,8 +100,16 @@
                 Седона не аттракцион для туристов, там<br>
                 течет своя жизнь</p>
             </div>
-            <img class="advantages__img" src="img/main-city-mobile@1x.jpg" width="320" height="260"
-              alt="Вид на уютный местный дом">
+            <div class="advantages__img-wrapper">
+              <picture>
+                <source media="(min-width: 1200px)"
+                  srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)"
+                  srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+                <img class="advantages__img" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x"
+                  width="320" height="260" alt="Вид на уютный местный дом">
+              </picture>
+            </div>
           </li>
           <li class="advantages__item">
             <div class="deep-advantages">
@@ -172,8 +188,17 @@
                 осмелитесь, конечно
               </p>
             </div>
-            <img class="second-advantage__img advantages__img" src="img/main-bridge-mobile@1x.jpg" width="320"
-              height="260" alt="Вид на уникальный местный ландшафт">
+            <div class="advantages__img-wrapper second-advantage__img">
+              <picture>
+                <source media="(min-width: 1200px)"
+                  srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)"
+                  srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+                <img class="second__img advantages__img" src="img/main-bridge-mobile@1x.jpg"
+                  srcset="img/main-bridge-mobile@2x.jpg 2x" width="320" height="260"
+                  alt="Вид на уникальный местный ландшафт">
+              </picture>
+            </div>
           </li>
         </ul>
         <ul class="advantages__list advantages__others">
