--- a/source/index.html
+++ b/source/index.html
@@ -244,8 +244,12 @@
     <section class="map">
       <h2 class="visually-hidden">Карта расположения города Седона</h2>
       <div class="map__wrapper">
-        <img class="map__picture" src="img/bg-map-mobile@1x.jpg" width="320" height="350"
-          alt="Карта с расположением города Седона, штат Аризона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+          <img class="map__picture" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" width="320"
+            height="350" alt="Карта с расположением города Седона, штат Аризона">
+        </picture>
       </div>
     </section>
   </main>
