--- a/source/photo.html
+++ b/source/photo.html
@@ -210,8 +210,7 @@
             очередной раз!</p>
         </div>
         <div class=" video__container">
-          <video class="video" poster="img/video-mobile@1x.jpg" width="320" height="201"
-            src="https://www.youtube.com/watch?v=_qHjLngt7OI"></video>
+          <video class="video" width="320" height="201" src="img/video-mobile@1x.jpg"></video>
         </div>
         <div class="video-tools">
           <div class="video-tools__wrapper">
