--- a/source/photo.html
+++ b/source/photo.html
@@ -9,6 +9,38 @@
 </head>
 
 <body class="page__body page-container">
+  <svg style="display: none">
+    <symbol id="icon-like" viewBox="0 0 22 20">
+      <g>
+        <g transform="translate(-295.000000, -464.000000)">
+          <g transform="translate(295.000000, 464.000000)">
+            <path
+              d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
+          </g>
+        </g>
+      </g>
+    </symbol>
+    <symbol id="icon-twitter" viewBox="0 0 17.5 14.663">
+      <g id="W6EeEF_1_">
+        <g>
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15 c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z" />
+        </g>
+      </g>
+    </symbol>
+    <symbol id="icon-facebook" viewBox="0 0 8.672 18.944">
+      <path
+        d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114 H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787 C5.765,5.069,5.75,3.709,6.275,3.356z" />
+    </symbol>
+    <symbol id="icon-youtube" viewBox="0 0 19.979 14.015">
+      <path
+        d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z" />
+    </symbol>
+    <symbol id="icon-academy" viewBox="0 0 60 60">
+      <path
+        d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
+    </symbol>
+  </svg>
   <header class="page-header">
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button">
@@ -85,6 +117,11 @@
         <div class="photo__wrapper">
           <div class="photo__item photo__first">
             <picture>
+              <source type="image/webp" media="(min-width: 1200px)"
+                srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)"
+                srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
               <source media="(min-width: 1200px)"
                 srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)"
@@ -97,24 +134,23 @@
               <div class="photo-text__wrapper--desktop">
                 <h3 class="photo__title">Неродные просторы</h3>
                 <p class="photo__description">Автор фото: Борис</p>
-                <button class="like first-photo__like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                    viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                    <g id="Page-1">
-                      <g id="Core1" transform="translate(-295.000000, -464.000000)">
-                        <g id="thumb-up1" transform="translate(295.000000, 464.000000)">
-                          <path id="Shape1" fill="#000000"
-                            d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
-                        </g>
-                      </g>
-                    </g>
-                  </svg><span class="likes-number">1350</span></button>
+                <button class="like first-photo__like" type="button">
+                  <svg width="22px" height="20px">
+                    <use xlink:href="#icon-like"></use>
+                  </svg>
+                  <span class="likes-number">1350</span></button>
               </div>
             </div>
           </div>
           <ul class="photo__list">
             <li class="photo__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)"
                   srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)"
@@ -126,23 +162,21 @@
                 <div class="photo-text__wrapper--desktop">
                   <h3 class="photo__title">Местная растительность</h3>
                   <p class="photo__description">Автор фото: Сергей</p>
-                  <button class="like others-photo__like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                      viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                      <g id="Page-2">
-                        <g id="Core2" transform="translate(-295.000000, -464.000000)">
-                          <g id="thumb-up2" transform="translate(295.000000, 464.000000)">
-                            <path id="Shape2" fill="#000000"
-                              d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
-                          </g>
-                        </g>
-                      </g>
-                    </svg><span class="likes-number">143</span></button>
+                  <button class="like others-photo__like" type="button">
+                    <svg width="22px" height="20px">
+                      <use xlink:href="#icon-like"></use>
+                    </svg>
+                    <span class="likes-number">143</span></button>
                 </div>
               </div>
             </li>
             <li class="photo__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)"
                   srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)"
@@ -154,23 +188,22 @@
                 <div class="photo-text__wrapper--desktop">
                   <h3 class="photo__title">Дорога на север</h3>
                   <p class="photo__description">Автор фото: Петр</p>
-                  <button class="like others-photo__like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                      viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                      <g id="Page-3">
-                        <g id="Core3" transform="translate(-295.000000, -464.000000)">
-                          <g id="thumb-up3" transform="translate(295.000000, 464.000000)">
-                            <path id="Shape3" fill="#000000"
-                              d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
-                          </g>
-                        </g>
-                      </g>
-                    </svg><span class="likes-number">96</span></button>
+                  <button class="like others-photo__like" type="button">
+                    <svg width="22px" height="20px">
+                      <use xlink:href="#icon-like"></use>
+                    </svg>
+                    <span class="likes-number">96</span></button>
                 </div>
               </div>
             </li>
             <li class="photo__item">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)"
+                  srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)"
                   srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)"
@@ -182,18 +215,11 @@
                 <div class="photo-text__wrapper--desktop">
                   <h3 class="photo__title">Мост Дьявола</h3>
                   <p class="photo__description">Автор фото: Антон</p>
-                  <button class="like others-photo__like" type="button"><svg xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                      viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                      <g id="Page-4">
-                        <g id="Core4" transform="translate(-295.000000, -464.000000)">
-                          <g id="thumb-up4" transform="translate(295.000000, 464.000000)">
-                            <path id="Shape4" fill="#000000"
-                              d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
-                          </g>
-                        </g>
-                      </g>
-                    </svg><span class="likes-number">254</span></button>
+                  <button class="like others-photo__like" type="button">
+                    <svg width="22px" height="20px">
+                      <use xlink:href="#icon-like"></use>
+                    </svg>
+                    <span class="likes-number">254</span></button>
                 </div>
               </div>
             </li>
@@ -264,48 +290,33 @@
           <li class="social__item">
             <a class="social__link social__link--twitter" href="">
               <span class="visually-hidden">Твитер</span>
-              <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-                y="0px" width="17.5px" height="14.663px" viewBox="0 0 17.5 14.663"
-                enable-background="new 0 0 17.5 14.663" xml:space="preserve">
-                <g id="W6EeEF_1_">
-                  <g>
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                      d="M11.283,0.153c1.736-0.484,3.074,0.264,3.685,1.15 c0.694-0.225,1.372-0.47,2.072-0.69c-0.004,0.841-0.538,1.478-0.883,1.728C16.861,2.506,17.5,1.86,17.5,1.86 c-0.175,0.977-1.035,1.746-1.611,1.977C15.65,10.429,12.617,14.793,5.507,14.66c-0.538,0,0.077,0-0.46,0 c-0.422,0-4.29-0.45-5.047-1.843c2.341,0.192,4.011-0.412,4.835-1.15c-0.989-0.293-2.761-0.464-3.07-2.881 c0.362,0.105,0.583,0.223,1.228,0.117C1.757,8.067,0.385,7.366,0.461,5.218c0.294,0.319,1.1,0.523,1.381,0.461 c-0.725-0.235-2.03-3.281-0.921-4.836C2.794,2.655,4.769,4.364,8.29,4.528C8.506,2.288,9.461,0.788,11.283,0.153z" />
-                  </g>
-                </g>
+              <svg width="17.5px" height="14.663px">
+                <use xlink:href="#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="">
               <span class="visually-hidden">Фэйсбук</span>
-              <svg id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-                y="0px" width="8.672px" height="18.944px" viewBox="0 0 8.672 18.944"
-                enable-background="new 0 0 8.672 18.944" xml:space="preserve">
-                <path
-                  d="M6.275,3.356c0.799,0,1.599,0,2.398,0c0-1.119,0-2.237,0-3.356c-0.959,0-1.92,0-2.878,0C2.656,0.181,1.54,2.387,1.948,6.114 H0v3.518h1.959c0,3.104,0,6.208,0,9.312c1.279,0,2.559,0,3.837,0c0-3.104,0-6.208,0-9.312h2.857V6.114H5.787 C5.765,5.069,5.75,3.709,6.275,3.356z" />
+              <svg width="8.672px" height="18.944px">
+                <use xlink:href="#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="">
               <span class="visually-hidden">Ютюб</span>
-              <svg id="Layer_3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
-                y="0px" width="19.979px" height="14.015px" viewBox="0 0 19.979 14.015"
-                enable-background="new 0 0 19.979 14.015" xml:space="preserve">
-                <path
-                  d="M17.145,0H2.835C1.275,0,0,1.275,0,2.835v8.345c0,1.56,1.275,2.835,2.835,2.835h14.31c1.56,0,2.835-1.275,2.835-2.835V2.835 C19.979,1.275,18.704,0,17.145,0z M7.036,10.392V3.623l6.769,3.384L7.036,10.392z" />
+              <svg width="19.979px" height="14.015px">
+                <use xlink:href="#icon-youtube"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
       <div class="copyright page-footer__item">
-        <a class="copyright__link " href="https://htmlacademy.ru/intensive/adaptive">Разработано
-          <svg class="copyright__link--academy" xmlns="http://www.w3.org/2000/svg" width="27px" height="34px"
-            viewBox="0 0 60 60">
-            <path fill="#000000"
-              d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано
+          <svg class="copyright__link--academy" width="27px" height="34px">
+            <use xlink:href="#icon-academy"></use>
           </svg>
           <span class="visually-hidden">HTML Academy</span>
         </a>
