--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Туристический город «Седона», штат Аризона</title>
   <link href="css/styles.min.css" rel="stylesheet">
+  <link rel="preload" href="fonts/ptsans.woff2" as="fonts">
 </head>
 
 <body class="page__body page-container">
@@ -204,17 +205,23 @@
     <section class="map">
       <h2 class="visually-hidden">Карта расположения города Седона</h2>
       <div class="map__wrapper">
-        <picture>
-          <source type="image/webp" media="(min-width: 1200px)"
-            srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)"
-            srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
-          <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
-          <img class="map__picture" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" width="320"
-            height="350" alt="Карта с расположением города Седона, штат Аризона">
-        </picture>
+        <iframe class="map-iframe" id="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419052.0229356343!2d-111.6200443011101!3d34.860148708411735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599324421562!5m2!1sru!2sru"
+          width="320" height="350" allowfullscreen="" aria-hidden="false"
+          tabindex="0"></iframe>
+        <div class="map-picture__wrapper">
+          <picture>
+            <source type="image/webp" media="(min-width: 1200px)"
+              srcset="img/bg-map-desktop@1x.webp 1x, img/bg-map-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/bg-map-tablet@1x.webp 1x, img/bg-map-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/bg-map-mobile@1x.webp 1x, img/bg-map-mobile@2x.webp 2x">
+            <source media="(min-width: 1200px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
+            <img class="map-picture" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" width="320"
+              height="350" alt="Карта с расположением города Седона, штат Аризона">
+          </picture>
+        </div>
       </div>
     </section>
   </main>
@@ -260,6 +267,8 @@
     </div>
   </footer>
   <script src="js/scripts.js"></script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTgOH4fLL578oVcwJ-Vh54nMeHreM3D8I"></script>
 </body>
 
 </html>
