--- a/source/photo.html
+++ b/source/photo.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Туристический город «Седона», штат Аризона</title>
   <link href="css/styles.min.css" rel="stylesheet">
+  <link rel="preload" href="fonts/ptsans.woff2" as="fonts">
 </head>
 
 <body class="page__body page-container">
