--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Туристический город «Седона», штат Аризона</title>
   <link href="css/styles.min.css" rel="stylesheet">
-  <link rel="preload" href="fonts/ptsans.woff2" as="fonts">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
 </head>
 
 <body class="page__body page-container">
@@ -67,8 +67,7 @@
       <header class="advantages__header">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <p class="advantages__slogan main-slogan">Седона — небольшой<br>
-          городок в Аризоне,<br>
-          заслуживающий большего!</p>
+          городок в Аризоне, <br>заслуживающий большего!</p>
         <p class="advantages__intro main-intro">Рассмотрим 5 причин, по которым<br>
           Седона круче, чем Гранд Каньон!</p>
       </header>
@@ -79,7 +78,7 @@
               <h3 class="advantages__title">Настоящий<br> городок</h3>
               <span class="advatages__number advatages__number--white">№1</span>
               <p class="advantages__description">
-                Седона не аттракцион для туристов, там<br>
+                Седона не аттракцион для туристов, там <br>
                 течет своя жизнь</p>
             </div>
             <div class="advantages__img-wrapper">
@@ -117,9 +116,8 @@
                       <use xlink:href="img/sprite.svg#icon-gift"></use>
                     </svg>
                     <h3 class="deep-advantages__title">Сувениры</h3>
-                    <p class="deep-advantages__description">Не только китайского, но
-                      &nbsp;и
-                      <br>местного производства!</p>
+                    <p class="deep-advantages__description">Не только китайского, но&nbsp;и
+                      <br>&nbsp;местного производства!</p>
                   </li>
                   <li class="deep-advantages__item">
                     <svg class=" deep-advantages__item--food" width="76.166px" height="68.959px">
@@ -207,8 +205,7 @@
       <div class="map__wrapper">
         <iframe class="map-iframe" id="map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419052.0229356343!2d-111.6200443011101!3d34.860148708411735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1599324421562!5m2!1sru!2sru"
-          width="320" height="350" allowfullscreen="" aria-hidden="false"
-          tabindex="0"></iframe>
+          width="320" height="350" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <div class="map-picture__wrapper">
           <picture>
             <source type="image/webp" media="(min-width: 1200px)"
